# bzkf-rwdp-check

./: .gitignore  Cargo.toml  Makefile  README.md
src/: cli.rs  common.rs  database.rs  lkrexport.rs  main.rs  opal.rs
src/resources/: export.sql  exported-to-lkr.sql  mod.rs  query.sql  query_with_schema_version.sql
testdaten/: testdaten_1.xml
