[package]
name = "bzkf-rwdp-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
console = "0.15"
csv = "1.3"
itertools = "0.12"
serde = { version = "1.0", features = ["derive"] }

