[package]
name = "bzkf-rwdp-check"
version = "0.3.3"
edition = "2021"
authors = ["Paul-Christian Volkmer <volkmer_p@ukw.de>"]
description = "Anwendung zur Durchf체hrung einer Plausibilit채tspr체fung anhand der Daten f체r die BZKF Real World Data Platform."
repository = "https://github.com/CCC-MF/bzkf-rwdp-check"

[dependencies]
clap = { version = "4.5", features = ["std", "help", "usage", "derive", "error-context"], default-features = false }
console = "0.15"
csv = "1.3"
dialoguer = "0.11"
itertools = "0.13"
mysql = "25.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2.1"
regex = "1.10"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true
panic = "abort"


